deployment/kubernetes/01_msr-customer-management_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-management
  name: customer-management
spec:
  replicas: 2
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  minReadySeconds: 60
  selector:
    matchLabels:
      app: customer-management
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: customer-management
    spec:
      containers:
      - name: customer-management-mcgw
        image: sagcr.azurecr.io/microgateway:10.15
        ports:
        - name: metrics
          containerPort: 9090
        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
      - image: azdevopssttacr.azurecr.io/msr-customer-management:latest
        imagePullPolicy: Always
        name: customer-management-msr
        ports:
        - name: metrics
          containerPort: 5555
        volumeMounts:
        - mountPath: "/tmp/license"
          name: licenses
          readOnly: true
        livenessProbe:
          tcpSocket:
            port: 5555
          initialDelaySeconds: 180
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 5555
          initialDelaySeconds: 5
          periodSeconds: 15
          failureThreshold: 12
      volumes:
      - name: licenses
        secret:
          secretName: licenses
      imagePullSecrets:
      - name: sagregcred
      - name: sttregcred
