deployment/kubernetes/02_msr-customer-management_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-management
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: sttlabcustomer
  labels:
    name: customer-management
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9090
    nodePort: 30001
  selector:
    app: customer-management
